@@ -31,6 +31,7 @@ include src/pythoncompat.c
 include src/share.c
 include src/stringcompat.c
 include src/threadsupport.c
+include src/util.c
 include python/curl/*.py
 include requirements*.txt
 include tests/*.py
